# vamos

./: .gitignore  Makefile  Pipfile  README.md  default.yaml  dotcollection.py  frame.py  make_video.sh  meteor.py  observe.py  pointsource.py  pyproject.toml  render.py  scene.py  simulate.py  simulator-cli.py  simulator.py  small.yaml  vamos-cli.py
config/: observers.yaml
config/meteors/: 18.yaml  ago-arbo.yaml
config/observers/: ago.yaml  arbo.yaml  knm.yaml  vaz.yaml
config/projections/: zero.yaml
config/renderers/: default.yaml
configs/: observers.yaml
configs/observers/: ago.yaml
configs/renderers/: default.yaml
effects/: detector.py  optical.py  sky.py
models/: meteor.py  observer.py  scene.py  simulation.py  skypointsource.py
output/: make_video.sh
sky/: effect.py
