[tool.poetry]
name = "simulator"
version = "0.1.0"
description = "A simulator of all-sky meteor cameras"
authors = ["Martin Baláž <martin.balaz@trojsten.sk>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
scipy = "^1.14.1"
amosutils = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
